<resources>
    <string name="app_name">Github Profiles</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_logo">App logo</string>
    <string name="github_username">Github Username</string>
    <string name="profiles">Profiles</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="github_person_image">Github person image</string>
    <string name="name_placeholder">Name:</string>
    <string name="name_placeholder_value">name</string>
    <string name="username_placeholder">Username:</string>
    <string name="username_placeholder_value">username</string>
    <string name="followers_placeholder">Followers:</string>
    <string name="followers_placeholder_value">20</string>
    <string name="repos_placeholder">Repos:</string>
    <string name="repos_placeholder_value">20</string>
    <string name="not_found">User not Found</string>
    <string name="supporting_text">Check username</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="gustavo_da_hora">Gustavo da Hora</string>
    <string name="github"><a href="https://github.com/gustavodahora">https://github.com/gustavodahora</a></string>
    <string name="hangloose">Hangloose</string>
    <string name="switch_theme">Switch theme</string>
    <string name="img_theme">Image theme</string>
    <string name="repo_name">Repo Name</string>
    <string name="repo_link">Repo Link</string>
</resources>